Opened 18 years ago
Closed 17 years ago
#634 closed bug (fixed)
[app_server] crash in Painter::FillRectNoClipping()
Reported by: | diver | Owned by: | stippi |
---|---|---|---|
Priority: | critical | Milestone: | R1/alpha1 |
Component: | Servers/app_server | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (1)
Change History (22)
by , 18 years ago
Attachment: | app_server_crash_3.PNG added |
---|
comment:1 by , 18 years ago
dependson: | → 630 |
---|
comment:2 by , 18 years ago
blocked: | → 679 |
---|
comment:3 by , 18 years ago
Ok, i think i found a way of how to reproduce it:
This is on new image with hrev18522 under vmware. Desktop context menu->New->Edit Template Now hold down alt+n and wait until current creating folder would be near "New Folder 150" at this point release alt+n (new folders will continue creating) and move this traker window around, resize, etc... I've managed to reproduce it 3/5 times. Hope this would help...
comment:4 by , 18 years ago
Summary: | [app_server] crash → [app_server] crash in Painter::FillRectNoClipping() |
---|
comment:5 by , 18 years ago
Owner: | changed from | to
---|
comment:7 by , 18 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
comment:8 by , 18 years ago
More easy way to reproduce it: Open one of the images located under /boot/beos/etc/Artwork in ShowImage Press several times (2-20) alt+enter for fullscreen. app_server should crash!
comment:9 by , 18 years ago
Component: | General → User Interface/app_server |
---|
comment:10 by , 18 years ago
Status: | new → assigned |
---|
comment:12 by , 18 years ago
You mean like in "it happens all the time now" or "the last remaining serious bug"? I have not seen it yet, but I'm going to try to reproduce it by the methods described here. Thanks for all your testing, btw!
comment:13 by , 17 years ago
I mean it happens all the time now and still could be easely reproducable with hrev21673.
comment:14 by , 17 years ago
I tried to reproduce this, but I cannot with your ShowImage fullscreen trick. Are you sure this bug still happens? You said in another bu you accidentally tested with an old image.
comment:15 by , 17 years ago
Yes, i think i was testing wrong image, it doesn't crash now, it only corrupt 1st raw of pixels, but i think i should open another bug for this. Please, close this bug.
comment:16 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Appearently fixed in the meantime.
P.S. Yes, I noticed the corrupted first row (or column, depends on image) of pixels.
comment:17 by , 17 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
app_server crashed with this back trace wile moving Deskar, reopening.
comment:18 by , 17 years ago
Milestone: | R1 → R1/alpha |
---|
comment:19 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
I cannot make app_server crash at all with any of the ways described here:
- Dragging Deskbar arround like mad while at the same time switching workspaces using the keyboard
- Toggling ShowImage full screen mode, also while at the same time switching workspaces
I think this bug has been fixed by fixing some of the race conditions in app_server that had to do with unlocking/locking the window lock to switch the locking type (single->all->single). I am not sure, but at least I cannot produce any app_server crash and neither any lockups.
So I am closing this bug, please reopen if you can still reproduce it, but please update the description for how to reproduce it. :-)
comment:20 by , 17 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Ah st, I can still reproduce it:
- Make sure there are a couple of windows showing on screen, place them so that there should be repaint events when dragging Deskbar in the next step
- I had the Workspaces applet open, don't know if it makes a difference, maybe it's even the one that crashes?
- Drag Deskbar arround like mad
- At the same time, switch Workspaces forth and back using the keyboard shortcuts
-> Should crash eventually in Painter::FillRectNoClipping()
Since it's crashing in *Painter*, maybe it happens only when there is no hardware accelerated drawing.
comment:21 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed in hrev22721.
I only fixed the crashing result, not the true cause, but when I tried to investigate this, I couldn't: The region that the view tries to draw is clipped against the window content region. So for it to be out of bounds, both regions have to be, or there has to be a BRegion bug. To get more info on the regions involved, I inserted the same check for an out of bounds region before the call to the DrawingEngine, but I couldn't get it triggered. Don't know what that means.
back trace