* fixed the crashing result of bug #634, check if the supplied region   falls within the frame buffer bounds. This should not happen, and   I am going to search for the cause next, but at least app_server   dosn't crash anymore in this context. Left a comment on my findings   so far.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22721 a95241bf-73f2-0310-859d-f6bbb57e9c96