src/servers/app/drawing/DrawingEngine.cpp
@@ -741,6 +741,20 @@ DrawingEngine::FillRegion(BRegion& r, const rgb_color& color)
 
 	// NOTE: region expected to be already clipped correctly!!
 	BRect frame = r.Frame();
+	if (!fPainter->Bounds().Contains(frame)) {
+		// NOTE: I am not quite sure yet how this can happen, but appearantly it can (see bug 634)
+		// This function is used for internal app_server painting, in the case of bug 634,
+		// the background of views is painted. But the view region should never be outside the
+		// frame buffer bounds.
+//		char message[1024];
+//		BRect bounds = fPainter->Bounds();
+//		sprintf(message, "FillRegion() - painter: (%d, %d)->(%d, %d), region: (%d, %d)->(%d, %d)",
+//			(int)bounds.left, (int)bounds.top, (int)bounds.right, (int)bounds.bottom,
+//			(int)frame.left, (int)frame.top, (int)frame.right, (int)frame.bottom);
+//		debugger(message);
+		return;
+	}
+
 	bool cursorTouched = fGraphicsCard->HideSoftwareCursor(frame);
 
 	// try hardware optimized version first
@@ -751,7 +765,7 @@ DrawingEngine::FillRegion(BRegion& r, const rgb_color& color)
 	} else {
 		int32 count = r.CountRects();
 		for (int32 i = 0; i < count; i++) {
-			fPainter->FillRectNoClipping(r.RectAt(i), color);
+			fPainter->FillRectNoClipping(r.RectAtInt(i), color);
 		}
 
 		fGraphicsCard->Invalidate(frame);
